# datapostproc-rust

./: CLAUDE.md  Cargo.toml  Structure.md
datapostproc/: Cargo.toml
datapostproc/docs/: fik_derivation.md
datapostproc/src/: data.rs  hdf5.rs  lib.rs  macros.rs  main.rs
datapostproc/src/math/: avg.rs  centerline.rs  fik.rs  mod.rs  ns.rs  rd.rs  spectrum.rs  tke.rs  vortex.rs  wall.rs
datapostproc/src/output/: dat.rs  mod.rs  normalize.rs  xdmf.rs
datapostproc/src/utils/: io.rs
datapostproc/tests/: fik_check.rs  ns_check.rs  read_h5.rs  spectra_check.rs
macro_struct/: Cargo.toml
macro_struct/src/: lib.rs
macro_struct/tests/: iter_fields.rs
src/: data.rs  hdf5.rs  lib.rs
src/math/: centerline.rs
