[workspace]
members = [
	"datapostproc",
	"struct-macro"
]
resolver = "2"

[workspace.package]
name = "datapostproc-rust"
edition = "2024"

[workspace.dependencies]
# external
blosc-src = '0.3.6'
ndarray = "0.16.1"
# hdf5-sys = '0.8.1'
clap = '4.5.40'
hdf5 = { package = "hdf5-metno", version = "0.10.1"}
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
# internal
datapostproc = {package = 'datapostproc', version = '0.1.0', path='datapostproc'}
struct-macro = {package = 'struct-macro', version = '0.1.0', path='struct-macro'}
