[workspace]
members = [
	"datapostproc",
	"macro_struct"
]
resolver = "2"

[workspace.package]
name = "datapostproc-rust"
edition = "2024"

[workspace.dependencies]
# external
blosc-src = '0.3.6'
ndarray = "0.16.1"
# hdf5-sys = '0.8.1'
clap = { version = '=4.5.32', features = ["derive"] }
hdf5 = { package = "hdf5-metno", version = "0.12.1"}
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
# internal
datapostproc = {package = 'datapostproc', version = '0.1.0', path='datapostproc'}
macro-struct = {package = 'macro-struct', version = '0.1.0', path='macro_struct'}
