[package]
name = "datapostproc-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# external
blosc-src = '0.3.6'
ndarray = {version = '0.16.1', features = ["blas"]}
# hdf5-sys = '0.8.1'
clap = { version = '=4.5.32', features = ["derive"] }
hdf5 = { package = "hdf5-metno", version = "0.12.4", features = ["blosc"]}
#internal
macro-struct = { workspace = true }
rustfft = "6.4.1"
